corrections des problemes de contraste

--- a/style.css
+++ b/style.css
@@ -654,13 +654,13 @@ h4 {
     background-color: #364577;
 }
 .bgc-atomic-tangerine {
-    background-color: #f3976c;
+    background-color: #95390F;
 }
 .tc-white {
-    color: #f3976c !important;
+    color: #FFFFFF !important;
 }
 .btn-atomic-tangerine {
-    background: #f3976c;
+    background: #95390F;
     color: #fff !important;
 }
 .btn-atomic-tangerine:hover {
@@ -674,7 +674,7 @@ h4 {
     color: #ccc !important;
 }
 .ltc-atomic-tangerine {
-    color: #f3976c !important;
+    color: #95390F !important;
 }
 .ltc-atomic-tangerine:hover {
     color: #c27956 !important;
